# http-server

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
examples/: post.rs
logs/: daily_2021-10-28.txt
protos/: route_client_param.proto  route_common.proto  route_result.proto  route_server_param.proto
routinglib/: routing_server.h
routinglib/NavigationData/TransitData/: Transit_110105.dat.md5
routinglib/config/: RoutePlan.xml  Walk_CostPolicy.xml  config.json  serverConfig.ini  walkRP.jpcy
src/: cli.rs  lib.rs
src/addon/: mod.rs
src/addon/api_server/: mod.rs  proto_wrapper.rs  redis.rs  redis_client.rs  route_wrapper.rs  search_poi.rs  service.rs
src/addon/api_server/route_c/: library-bridge.cpp  library-bridge.hpp  routing_server.h
src/addon/file_server/: directory_entry.rs  file_server.rs  mod.rs  scoped_file_system.rs
src/addon/proxy/: handler.rs  mod.rs  target.rs
src/config/: file.rs  mod.rs  proxy.rs  yaml.rs
src/protos/: mod.rs  route_client_param.rs  route_common.rs  route_result.rs  route_server_param.rs
src/server/: handler.rs  mod.rs
src/server/handler/: api_server.rs  file_server.rs  mod.rs
src/server/middleware/: mod.rs
tests/: mod.rs  post.rs
