[package]
name = "http-server"
version = "0.5.6"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
description = "Simple and configurable command-line HTTP server"
repository = "https://github.com/EstebanBorai/http-server"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["configurable", "http", "server", "serve", "static"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "http_server_lib"
path = "src/lib.rs"

[[bin]]
name = "http-server"
path = "src/bin/main.rs"

[[bench]]
name = "file_explorer"
harness = false

[[example]]
name = "post"
path = "examples/post.rs"

[features]
dhat-profiling = ["dhat"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
chrono = "0.4"
dhat = { version = "0.2", optional = true }
futures = "0.3"
flate2 = "1.0"
http = "0.2"
http-auth-basic = "0.3.1"
handlebars = "4"
hyper = { version = "0.14", features = ["http1", "server", "client", "stream", "tcp"] }
local-ip-address = "0.4.4"
mime_guess = "2"
rustls = "0.19"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-rustls = "0.22"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
redis = { version = "*", features = [ "cluster"] }
yaml-rust = "*"
libc = "0.2.0"
protobuf = "*"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"

[build-dependencies]
bindgen = "0.59.0"
cc = "1.0.70"
protoc-rust = "2.0"

[profile.release]
debug = 1
